# rust_scripts

calculator/: Cargo.toml
calculator/src/: calculator.pest  main.rs
crate_study/: .gitignore  Cargo.toml  docker-compose.yml
crate_study/codegen/: Cargo.toml
crate_study/codegen/src/: lib.rs
crate_study/examples/kafka/: Cargo.toml  docker-compose.yml
crate_study/examples/rabbitmq/: Cargo.toml  docker-compose.yml
crate_study/examples/rabbitmq/src/: main.rs
crate_study/src/: amqp.rs  kafka.rs  main.rs
grpc/: Cargo.toml  build.rs
grpc/src/: client.rs  server.rs
