[package]
name = "crate_study"
version = "0.1.0"
authors = ["Jonas Lima <jonaslimads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

amqp = ["lapin"]

kafka = ["rust_kafka"]

[dependencies]

# amqp
lapin = { version = "1.6.8", optional = true}

# kafka
rust_kafka = { package = "kafka", version = "0.8", optional = true}
